# one-vs-a-hundred

./: .gitignore  CLAUDE.md  README.md  baseline.py  eventResponse.py  prediction_results_20251005_162132.csv  pyproject.toml
data/: event_data.csv  stock_data.csv
data/answer/: prediction_results.csv
data/articles/: filter_stats.json
data/articles/csv/: filtered_news_20250924_043743.csv  filtered_news_20251001_151420.csv  news_with_market_cap_20250924_135112.csv  news_with_market_cap_20250929_180045.csv  news_with_market_cap_with_actual_url.csv
data/articles/json/: filtered_news_20250924_043743.json  filtered_news_20250924_043743.jsonl  filtered_news_20251001_151420.json  filtered_news_20251001_151420.jsonl  news_with_market_cap_20250924_135112.json  news_with_market_cap_20250929_180045.json
data/persona/: persona_eda.py  persona_generator.py  prompt_genarator_json.py
data/persona/csv/: Persona_Data.csv  Persona_Data_1.csv  Persona_Data_2.csv  Persona_Data_3.csv  Persona_Data_4.csv  Persona_Data_5.csv
data/persona/json/: persona_profiles.json  persona_profiles_1.json  persona_profiles_2.json  (+3 more)
yujin/: 01_data_related.ipynb  02_crawling_articles.py  03_crawling_articles_OOP.py  04_attach_marketcap.py  A_data_related.ipynb  A_gen_event_data.py  B_crawling_articles.py  CA_scrap_articles_bodies.py  CA_scrap_articles_bodies_copy.py  CA_v2_get_actual_url.py  CB_get_article_body.py  CC_retry_failed_url.py  CD_check_crawling.py  C_crawling_articles_OOP.py  D_attach_marketcap.py  E_data_form_making.py  F_call_openrouter.py  G_scoring_answer.py  related_to_DA.ipynb
