[project]
name = "1vs100"
version = "0.1.0"
description = "1 LLM vs. 100 persona given sLLMs"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "openai (>=1.107.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]
[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
